force-app/main/default/objects/Payment_Default__c/Payment_Default__c.object-meta.xml
<CustomObject>
    <label>Payment Default</label>
    <nameField>
        <displayFormat>PD-{0000}</displayFormat>
        <label>Payment Defaults Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Defaults</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>