force-app/main/default/objects/Payment_Default__c/fields/Credit_Account__c.field-meta.xml
<CustomField>
    <fullName>Credit_Account__c</fullName>
    <label>Credit Account</label>
    <referenceTo>Credit_Account__c</referenceTo>
    <relationshipLabel>Payment Defaults</relationshipLabel>
    <relationshipName>Payment_Defaults</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>