force-app/main/default/objects/Payment_Default__c/fields/Current_Default_Amount__c.field-meta.xml
<CustomField>
    <fullName>Current_Default_Amount__c</fullName>
    <label>Current Default Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>